# cachyos-service-manager

./: .SRCINFO  .gitignore  ARCHITECTURE.md  LICENSE  PKGBUILD  README.md  README_DESKTOP_TEST.md  README_PLASMA.md  desktop_test.py  desktop_test_groups.py  desktop_test_plasma.py  desktop_test_plasma_groups.py  full_service_manager_gtk.py  full_service_manager_plasma.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml  group_templates.json
docs/: API.md
packaging/: README.md  cachyos-service-manager-gtk.desktop  cachyos-service-manager-qt.desktop
src/cachyos_service_manager/gui/: main.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  i18n.py  monitor.py  resource_monitor.py  service.py  service_group.py  service_manager.py  systemd.py  systemd.py.backup
src/core/locale/de/LC_MESSAGES/: cachyos-service-manager.mo  cachyos-service-manager.po
src/core/locale/en/LC_MESSAGES/: cachyos-service-manager.mo  cachyos-service-manager.po
src/gui/: __init__.py
tests/: __init__.py  test_core.py  test_systemd.py
